// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alert > rendrer riktig med default verdier 1`] = `
<DocumentFragment>
  <div
    class="_alert_9168cd"
    data-testid="alert"
    role="alert"
  >
    <div
      class="_alertWrapper_9168cd navds-body-long navds-body-long--medium"
    >
      My text
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert > rendrer riktig når onRetry er oppgitt 1`] = `
<DocumentFragment>
  <div
    class="_alert_9168cd"
    data-testid="alert"
    role="alert"
  >
    <div
      class="_alertWrapper_9168cd navds-body-long navds-body-long--medium"
    >
      My text
    </div>
    <button
      class="navds-button navds-button--tertiary navds-button--small"
    >
      <span
        class="navds-label navds-label--small"
      >
        application.global.retry
      </span>
      <span
        class="navds-button__icon"
      >
        <svg
          aria-hidden="true"
          fill="none"
          focusable="false"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18.746 7.25A8.25 8.25 0 1 0 20.25 12a.75.75 0 0 1 1.5 0c0 5.385-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12 6.615 2.25 12 2.25a9.73 9.73 0 0 1 7.75 3.833V3.5a.75.75 0 0 1 1.5 0V8a.75.75 0 0 1-.75.75H16a.75.75 0 0 1 0-1.5z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </div>
</DocumentFragment>
`;
